// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays correct first child 1`] = `
<footer
  class="footer"
>
  Copyright
   
  ©
   
  <a
    alt="github link"
    href="https://github.com/iliebabcenco"
  >
    Ilie Babcenco
  </a>
</footer>
`;

exports[`should take a snapshot 1`] = `
<DocumentFragment>
  <footer
    class="footer"
  >
    Copyright © 
    <a
      alt="github link"
      href="https://github.com/iliebabcenco"
    >
      Ilie Babcenco
    </a>
  </footer>
</DocumentFragment>
`;
